# Real-Time-SVSDF-Planner

./: README.md
src/: hello.md  log.txt  src.code-workspace
src/controller/: CMakeLists.txt  package.xml
src/controller/include/controller/: controller.hpp
src/controller/src/: controller.cpp  controller_node.cpp
src/debug_assistant/: CMakeLists.txt
src/debug_assistant/scripts/: operations.json  ros_gol.py
src/environment/laser_simulator/: CMakeLists.txt  package.xml
src/environment/laser_simulator/config/: normal_laser.yaml  perspective_laser.yaml
src/environment/laser_simulator/launch/: params.yaml
src/environment/laser_simulator/src/: laser_sim_node.cpp
src/environment/plan_env/: CMakeLists.txt  package.xml
src/environment/plan_env/config/: Generate_Map.m  obs5.yaml
src/environment/plan_env/include/plan_env/: sdf_map.h
src/environment/plan_env/src/: sdf_map.cpp
src/environment/robotstatemsgs/: CMakeLists.txt  package.xml
src/environment/robotstatemsgs/msg/: robotState.msg  robotTrajectory.msg
src/environment/simulator/: CMakeLists.txt  package.xml
src/environment/simulator/include/simulator/: global_map.hpp  simulator.hpp
src/environment/simulator/src/: global_map.cpp  simulator.cpp
src/environment/simulator/urdf/: A.dae  Arc.dae  F.dae  S.dae  T.dae
src/plan_manager/: CMakeLists.txt  package.xml
src/plan_manager/config/: car3ms_unknown.yaml  obs5.yaml  shape.yaml
src/plan_manager/include/: plan_manager.hpp
src/plan_manager/launch/: run_sim.launch
src/plan_manager/rviz/: rviz_sim.rviz
src/plan_manager/src/: global_planning.cpp  plan_manager.cpp
src/planner_algorithm/: CMakeLists.txt  package.xml
src/planner_algorithm/include/planner_algorithm/: BSpline_optimizer.hpp  front_end_astar.hpp
src/planner_algorithm/src/: BSpline_optimizer.cpp  front_end_astar.cpp
src/swept_volume/: CMakeLists.txt  package.xml
src/swept_volume/include/swept_volume/: swept_volume_manager.hpp
src/swept_volume/src/: swept_volume_manager.cpp
src/utils/: CMakeLists.txt  package.xml
src/utils/include/utils/: NURBS.hpp  lbfgs.hpp  shape.hpp  visualization.hpp
